--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -39,15 +39,19 @@
                     android:src="@drawable/circle"/>
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:textStyle="bold"
                     android:layout_gravity="center"
                     android:layout_marginStart="10dp"
                     android:textColor="?attr/colorPrimaryVariant"
                     android:textSize="18sp"
                     android:text="@{searchViewModel.typeOfLyrics == SearchResultFragment.MAIN_LYRICS ? @string/main_lyrics_search_result : @string/similiar_lyrics_search_result}"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
 
                 <ImageView
                     android:layout_width="30dp"
@@ -83,8 +87,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/show_more_results"
                 android:padding="@dimen/app_padding"
+                android:clickable="@{!searchViewModel.searching}"
                 android:onClick="@{()->searchViewModel.showMoreResultsClicked()}"
-                android:visibility="@{searchViewModel.thereAreMoreResults &amp;&amp; !searchViewModel.resultsHidden ? View.VISIBLE : View.GONE}"
+                android:visibility="@{searchViewModel.thereAreMoreResults &amp;&amp; !searchViewModel.resultsHidden &amp;&amp; !searchViewModel.searching ? View.VISIBLE : View.GONE}"
                 android:textColor="?attr/colorPrimary"
                 android:gravity="center"/>
 
