--- a/app/src/main/res/drawable/s_search_alpha.xml
+++ b/app/src/main/res/drawable/s_search_alpha.xml
@@ -4,6 +4,6 @@
 
     <gradient
         android:startColor="@android:color/transparent"
-        android:endColor="?attr/colorSecondary"
+        android:endColor="@color/gray"
         android:angle="270"/>
 </shape>
