--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -8,20 +9,17 @@
     </data>
 
     <androidx.core.widget.NestedScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/colorSecondary"
-        tools:context=".search.SearchFragment">
+        android:fillViewport="true"
+        android:background="?attr/colorSecondary">
 
         <LinearLayout
             android:id="@+id/searchContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingTop="40dp"
-            android:paddingBottom="30dp">
+            android:paddingTop="40dp">
 
             <fragment
                 android:id="@+id/currentLanguageFragment"
@@ -75,6 +73,46 @@
                     android:background="@android:color/transparent"/>
 
             </LinearLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginTop="20dp"
+                android:paddingEnd="@dimen/app_padding"
+                android:paddingStart="@dimen/app_padding"
+                android:paddingBottom="10dp">
+
+                <ImageView
+                    android:src="@drawable/ic_filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toTopOf="@id/filterText"
+                    app:layout_constraintRight_toLeftOf="@id/filterText"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:scaleType="center"/>
+
+                <TextView
+                    android:id="@+id/filterText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/filter"
+                    android:textStyle="bold"
+                    android:textSize="15sp"
+                    android:textColor="@color/light_blue"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
+                android:id="@+id/fragmentsContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="20dp"
+                android:background="@drawable/s_search_backgr"
+                android:paddingBottom="30dp"
+                android:orientation="vertical"/>
 
         </LinearLayout>
 
