--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="android.view.View"/>
@@ -10,16 +12,13 @@
     </data>
 
     <androidx.core.widget.NestedScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/colorSecondary"
+        android:layout_height="wrap_content"
         tools:context=".search.SearchFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
@@ -62,16 +61,55 @@
 
             </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="@{(!searchViewModel.resultsAvailable &amp;&amp; searchViewModel.typeOfLyrics == SearchResultFragment.MAIN_LYRICS) ? View.VISIBLE : View.GONE}"
+<!--                            android:visibility="@{(!searchViewModel.resultsAvailable &amp;&amp; searchViewModel.typeOfLyrics == SearchResultFragment.MAIN_LYRICS) ? View.VISIBLE : View.GONE}"-->
+<!--            android:text="@{@string/no_word_search_results(searchViewModel.searchWord)}"-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:padding="@dimen/app_padding"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="50dp"
-                android:textSize="15sp"
-                android:gravity="center"
-                android:text="@{@string/no_word_search_results(searchViewModel.searchWord)}"/>
+                android:paddingTop="20dp"
+                android:visibility="@{(!searchViewModel.resultsAvailable &amp;&amp; searchViewModel.typeOfLyrics == SearchResultFragment.MAIN_LYRICS) ? View.VISIBLE : View.GONE}"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/app_padding"
+                    android:scaleType="fitStart"
+                    android:src="@drawable/gr_cloud_astronaut"/>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:foregroundGravity="center"
+                    android:paddingStart="@dimen/app_padding"
+                    android:paddingEnd="@dimen/app_padding">
+
+                    <TextView
+                        android:id="@+id/opsText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:text="Opss.."
+                        android:textSize="18sp"
+                        android:textColor="?attr/colorPrimaryVariant"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{@string/no_word_search_results(searchViewModel.searchWord)}"
+                        android:textSize="15sp"
+                        app:layout_constraintTop_toBottomOf="@id/opsText"
+                        app:layout_constraintLeft_toLeftOf="parent"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </LinearLayout>
 
             <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
