--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="dark_gray">#F1F1F1</color>
     <color name="background_gray">#FDFDFD</color>
     <color name="light_gray">#E7E7E7</color>
+    <color name="gray">#F4F4F4</color>
     <color name="header_gray">#232323</color>
     <color name="paragraph_gray">#4A4A4A</color>
     <color name="translation_gray">#636363</color>
