--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,84 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:background="?attr/colorSecondary">
 
-    <data>
-        <variable
-            name="viewModel"
-            type="com.whycody.wordslife.search.SearchViewModel" />
-    </data>
-
-    <androidx.core.widget.NestedScrollView
+    <LinearLayout
+        android:id="@+id/searchContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:background="?attr/colorSecondary">
+        android:orientation="vertical"
+        android:paddingTop="40dp">
 
-        <LinearLayout
-            android:id="@+id/searchContainer"
+        <fragment
+            android:id="@+id/currentLanguageFragment"
+            android:name="com.whycody.wordslife.current.language.CurrentLanguageFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="40dp">
+            android:layout_height="wrap_content" />
 
-            <fragment
-                android:id="@+id/currentLanguageFragment"
-                android:name="com.whycody.wordslife.current.language.CurrentLanguageFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+        <fragment
+            android:id="@+id/searchFieldFragment"
+            android:name="com.whycody.wordslife.search.field.SearchFieldFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="17dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginStart="@dimen/app_padding"
+            android:layout_marginEnd="@dimen/app_padding"/>
 
-            <fragment
-                android:id="@+id/searchFieldFragment"
-                android:name="com.whycody.wordslife.search.field.SearchFieldFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="17dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginStart="@dimen/app_padding"
-                android:layout_marginEnd="@dimen/app_padding"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="20dp"
+            android:paddingEnd="@dimen/app_padding"
+            android:paddingStart="@dimen/app_padding"
+            android:paddingBottom="10dp">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <ImageView
+                android:src="@drawable/ic_filter"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="@id/filterText"
+                app:layout_constraintRight_toLeftOf="@id/filterText"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:scaleType="center"/>
+
+            <TextView
+                android:id="@+id/filterText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="20dp"
-                android:paddingEnd="@dimen/app_padding"
-                android:paddingStart="@dimen/app_padding"
-                android:paddingBottom="10dp">
+                android:text="@string/filter"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:textColor="@color/light_blue"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-                <ImageView
-                    android:src="@drawable/ic_filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    app:layout_constraintTop_toTopOf="@id/filterText"
-                    app:layout_constraintRight_toLeftOf="@id/filterText"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:scaleType="center"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:id="@+id/filterText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/filter"
-                    android:textStyle="bold"
-                    android:textSize="15sp"
-                    android:textColor="@color/light_blue"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+        <fragment
+            android:id="@+id/searchContentFragment"
+            android:name="com.whycody.wordslife.search.content.SearchContentFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/fragmentsContainer"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingTop="20dp"
-                android:background="@drawable/s_search_backgr"
-                android:paddingBottom="30dp"
-                android:orientation="vertical"/>
-
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
-
-</layout>
+</androidx.core.widget.NestedScrollView>
