--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,73 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    android:id="@+id/coordinatorContainer"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:overScrollMode="never"
     android:background="?attr/colorSecondary">
 
-    <LinearLayout
-        android:id="@+id/searchContainer"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/searchAppBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:elevation="0dp"
+        android:background="?attr/colorSecondary">
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/toolbarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="50dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <LinearLayout
+                android:id="@+id/searchContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="40dp">
+
+                <fragment
+                    android:id="@+id/currentLanguageFragment"
+                    android:name="com.whycody.wordslife.current.language.CurrentLanguageFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <fragment
+                    android:id="@+id/searchFieldFragment"
+                    android:name="com.whycody.wordslife.search.field.SearchFieldFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="25dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginStart="@dimen/app_padding"
+                    android:layout_marginEnd="@dimen/app_padding"/>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp">
+
+                    <LinearLayout
+                        android:id="@+id/filterBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="@dimen/app_padding"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent">
+
+                        <ImageView
+                            android:src="@drawable/ic_filter_list"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:scaleType="center"
+                            android:paddingEnd="2dp"/>
+
+                        <TextView
+                            android:id="@+id/filterText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="@string/filter"
+                            android:textStyle="bold"
+                            android:textSize="15sp"
+                            android:textColor="@color/light_blue"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/sortBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:paddingStart="@dimen/app_padding"
+                        android:paddingEnd="@dimen/app_padding"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent">
+
+                        <ImageView
+                            android:src="@drawable/ic_sort"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:scaleType="center"
+                            android:paddingEnd="2dp"/>
+
+                        <TextView
+                            android:id="@+id/sortText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="@string/sort"
+                            android:textStyle="bold"
+                            android:textSize="15sp"
+                            android:textColor="@color/light_blue"/>
+
+                    </LinearLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </LinearLayout>
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <View
+        android:id="@+id/downCornersContentFragment"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@color/gray"
+        app:layout_anchor="@id/searchContentFragment"
+        app:layout_anchorGravity="bottom"/>
+
+    <fragment
+        android:id="@+id/searchContentFragment"
+        android:name="com.whycody.wordslife.search.content.SearchContentFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="40dp">
+        app:layout_anchor="@+id/searchAppBar"
+        app:layout_anchorGravity="bottom"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-        <fragment
-            android:id="@+id/currentLanguageFragment"
-            android:name="com.whycody.wordslife.current.language.CurrentLanguageFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <fragment
-            android:id="@+id/searchFieldFragment"
-            android:name="com.whycody.wordslife.search.field.SearchFieldFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="17dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginStart="@dimen/app_padding"
-            android:layout_marginEnd="@dimen/app_padding"/>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="20dp"
-            android:paddingEnd="@dimen/app_padding"
-            android:paddingStart="@dimen/app_padding"
-            android:paddingBottom="10dp">
-
-            <ImageView
-                android:src="@drawable/ic_filter"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="@id/filterText"
-                app:layout_constraintRight_toLeftOf="@id/filterText"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:scaleType="center"/>
-
-            <TextView
-                android:id="@+id/filterText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/filter"
-                android:textStyle="bold"
-                android:textSize="15sp"
-                android:textColor="@color/light_blue"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <fragment
-            android:id="@+id/searchContentFragment"
-            android:name="com.whycody.wordslife.search.content.SearchContentFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
-
-</androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
