--- a/app/src/main/res/layout/fragment_search_content.xml
+++ b/app/src/main/res/layout/fragment_search_content.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".search.content.SearchContentFragment">
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/gray"
+    app:cardCornerRadius="30dp"
+    android:fillViewport="true"
+    app:cardElevation="0dp">
 
-    <LinearLayout
-        android:id="@+id/fragmentsContainer"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="20dp"
-        android:background="@drawable/s_search_backgr"
-        android:paddingBottom="30dp"
-        android:orientation="vertical"/>
+        android:fillViewport="true"
+        android:overScrollMode="never">
 
-</FrameLayout>
+        <LinearLayout
+            android:id="@+id/fragmentsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="20dp"
+            android:paddingBottom="30dp"
+            android:orientation="vertical"/>
+
+    </androidx.core.widget.NestedScrollView>
+
+</com.google.android.material.card.MaterialCardView>
