--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/app_padding"
-                android:onClick="@{()->searchViewModel.setUserAction(SearchFragment.LYRIC_CLICKED, lyricItem.lyricId)}">
+                android:onClick="@{()->searchViewModel.setUserAction(SearchFragment.LYRIC_CLICKED, lyricItem.lyricId, lyricItem)}">
 
                 <LinearLayout
                     android:layout_width="0dp"
