--- a/app/src/main/res/layout/item_sort.xml
+++ b/app/src/main/res/layout/item_sort.xml
@@ -10,7 +10,7 @@
             type="boolean" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
+    <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -80,10 +80,11 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:overScrollMode="never"
                 android:nestedScrollingEnabled="false"/>
 
         </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
+    </LinearLayout>
 
 </layout>
