--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,7 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/background_gray_night</item>
         <item name="colorSecondaryVariant">@color/gray_night</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <item name="colorAccent">@color/light_blue_night</item>
         <item name="colorPrimaryDark">@color/header_gray_night</item>
         <item name="colorOnSurface">@color/paragraph_gray_night</item>
@@ -25,5 +25,6 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
         <item name="bottomSheetStyle">@style/AppModalStyle</item>
+        <item name="colorAccent">@color/light_blue_night</item>
     </style>
 </resources>
